# toy_kernel

./: .gitignore
toy_kernel/: Cargo.toml
toy_kernel/.cargo/: config.toml
toy_kernel/src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
toy_kernel/tests/: basic_boot.rs  should_panic.rs
