[package]
name = "toy_kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "toy_kernel"
test = false
bench = false


[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.10.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
